--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/preethirmani/EventsOnline#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "concurrently": "^7.6.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
