--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,9 +2,10 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
-  "proxy" : "http://localhost:8800",
+  "proxy": "http://localhost:8800",
   "dependencies": {
     "@react-google-maps/api": "^2.17.1",
+    "@reduxjs/toolkit": "^1.9.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -16,6 +17,7 @@
     "react-dom": "^18.2.0",
     "react-dotenv": "^0.1.3",
     "react-geocode": "^0.2.3",
+    "react-redux": "^8.0.5",
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
